# a121_backend

./: .gitattributes  .gitignore  Procfile  README.md  credentials.json  db.sqlite3  desktop.ini  index_exportado.txt  manage.py  models.py  move_postgresql_files.sh  pyproject.toml  render.yaml  requirements.txt  settings_backend.txt  test_dialogflow.py  urls_backend.txt  urls_core.txt  views_core.txt
a121_backend/: asgi.py  desktop.ini  middleware.py  settings.py  urls.py  urls.pye  wsgi.py
core/: blockchain.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_curso_nivel_produto_atualizado_em_produto_criado_em_and_more.py  0003_a121coinsupply_a121coin.py  0004_a121cointransaction_a121cointransactionlog.py
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
static/: desktop.ini
static/css/: styles.css
static/js/: main.js
static/models/: test.glb
static/videos/: desktop.ini
staticfiles/: desktop.ini
staticfiles/css/: styles.css
staticfiles/images/: desktop.ini
staticfiles/js/: main.js
staticfiles/models/: iphone15.glb
templates/: dashboard.html
templates/core/: base.html  cadastro.html  chat.html  cursos.html  dashboard.html  escritorio.html  ganhar_pontos.html  index.html  login.html  product_detail.html  signup.html
