[project]
name = "a121-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Eder", email = "souzaeder175@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
